# ResearchGraph-AI

./: .env.example  .gitignore  API.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  app.py  examples.py  pyproject.toml  requirements.txt  setup.py  tests.py
backend/: __init__.py  citation_analyzer.py  graph_builder.py  nlp_processor.py  paper_retrieval.py  similarity_search.py
utils/: __init__.py  cache.py  config.py  export.py  realtime.py
